# rminuit2

./: .Rbuildignore  DESCRIPTION  NAMESPACE  README.md  cleanup  configure
R/: RcppExports.R  rminuit2.R
man/: rminuit2.Rd  rminuit2_expr.Rd  rminuit2_expr_gaussian.Rd  rminuit2_par.Rd
src/: Makevars  RcppExports.cpp  assert_throw.h  evaluate.h  rminuit2.cc
src/minuit2/: Makefile.in  README.md
src/minuit2-alu/: Makefile.am  README.md  aclocal.m4  config.h.in  configure  configure.ac
src/minuit2-alu/doc/: Makefile.in
src/minuit2-alu/inc/: Makefile.in  assert_throw.h
src/minuit2-alu/inc/Fit/: Makefile.am  Makefile.in
src/minuit2-alu/inc/Math/: IFunctionfwd.h  Makefile.am
src/minuit2-alu/inc/Minuit2/: FumiliMaximumLikelihoodFCN.h  MnUserCovariance.h
src/minuit2-alu/src/: Makefile.in  SimplexBuilder.cxx  VariableMetricBuilder.cxx
src/minuit2-alu/test/MnSim/: Makefile.am
src/minuit2/inc/: Makefile.am
src/minuit2/inc/Math/: Makefile.in  Util.h
src/minuit2/inc/Minuit2/: Makefile.am  Makefile.in
src/minuit2/src/: Makefile.am  MinimumBuilder.cxx
src/minuit2/test/: Makefile.am  Makefile.in
src/minuit2/test/MnSim/: Makefile.in
src/minuit2/test/MnTutorial/: Makefile.am  Makefile.in
