# @(#)root/mathcore:$Id: inc_Math_Makefile.am 21158 2007-12-03 17:01:35Z moneta $
# Author: L. Moneta    2005
#
## Process this file with automake to produce Makefile.in .
#
#

# The following is set, otherwise it would follow GNU conventions.
AUTOMAKE_OPTIONS = foreign

fitdir = $(includedir)/Fit

fit_HEADERS = \
  ParameterSettings.h
